fix hover on mobile 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -647,7 +647,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     -o-transition: all 1s ease;
     transition: all 1s ease;
 }
-@media (hover: hover) {
+@media (min-width: 750px) {
     .cert-img:hover {
         transform: scale(1.5);
         -webkit-transform: scale(2.5);
